--- a/style.css
+++ b/style.css
@@ -1,3 +1,38 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+
 * {
-    color: red;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
 }
+
+#as-logo {
+    height: 50px;
+    width: 50px
+}
+
+li {
+    list-style-type: none;
+}
+
+/* 
+
+NAVIGATION
+
+*/
+
+nav {
+    display: flex;
+    justify-content: space-between;
+}
+
+.nav__link--list {
+    display: flex;
+}
+
+.nav__link {
+    padding: 8px;
+}
+
