--- a/style.css
+++ b/style.css
@@ -8,10 +8,7 @@
     font-family: 'Roboto', sans-serif;
 }
 
-#as-logo {
-    height: 50px;
-    width: 50px
-}
+
 
 li {
     list-style-type: none;
@@ -26,6 +23,16 @@ NAVIGATION
 nav {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    height: 100px;
+}
+
+#as-logo {
+    height: 50px;
+    width: 50px
 }
 
 .nav__link--list {
@@ -33,6 +40,16 @@ nav {
 }
 
 .nav__link {
-    padding: 8px;
+    margin: 0 12px;
 }
 
+.nav__link--anchor {
+    text-decoration: none;
+    font-size: 16px;
+    color: #242424;
+    font-weight: 700;
+}
+
+.fa-adjust {
+    font-size: 20px;
+}
