--- a/style.css
+++ b/style.css
@@ -164,8 +164,9 @@ nav {
 }
 
 #as-logo {
-    height: 50px;
-    width: 50px
+    height: 75px;
+    width: 75px;
+    border-radius: 50%;
 }
 
 .nav__link--list {
