--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ section {
 
 .container {
     padding: 50px 0;
+    width: 100%;
 }
 
 .row {
@@ -275,3 +276,16 @@ PROJECTS
 .project__description--para {
     margin: 16px 0;
 }
+
+/* 
+
+FOOTER
+
+*/
+
+footer {
+    background-color: #242424;
+    display: flex;
+
+}
+
