--- a/style.css
+++ b/style.css
@@ -284,8 +284,33 @@ FOOTER
 */
 
 footer {
-    background-color: #242424;
+    background-color: #121212;
     display: flex;
-
+    padding: 6% 0%;
 }
 
+.footer__row {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.footer__logo--img {
+    width: 70px;
+    filter: invert();
+}
+
+.footer__social--list {
+    width: 100%;
+    max-width: 500px;
+    display: flex;
+    justify-content: space-around;
+    margin: 20px 0;
+}
+
+.footer__social--link,
+.footer__copyright {
+    color: white;
+    font-size: 14px;
+    padding: 0 8px;
+}
