--- a/style.css
+++ b/style.css
@@ -29,6 +29,38 @@ section {
     background-color: rgb(245, 245, 245);
 }
 
+input, textarea {
+    width: 100%;
+    background-color: #242424;
+    color: white;
+    outline: none;
+    border: 3px solid #c0c4cc;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    height: 40px;
+    transition: all 300ms ease;
+}
+
+textarea {
+    resize: vertical;
+    height: 100px;
+    margin-top: 8px;
+}
+
+label {
+    font-size: 14px;
+    font-weight: bold;
+}
+
+input:hover, textarea:hover {
+    border-color: #dcdfe6;
+}
+
+input:focus, textarea:focus {
+    border-color: #006b3c;
+}
+
 .container {
     padding: 50px 0;
     width: 100%;
@@ -247,29 +279,18 @@ MODAL
     display: flex;
 }
 
-.modal__title {
-    font-size: 26px;
-}
 
-.modal__sub-title {
-    margin: 12px 0 24px 0;
-}
-
-.modal__para {
-    margin-bottom: 12px;
-    line-height: 1.75;
-}
 
 .modal__half {
     width: 50%;
     padding: 40px 72px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .modal__about {
     background-color: rgb(245, 245, 245);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
 }
 
 .modal__languages {
@@ -309,6 +330,46 @@ MODAL
 .modal__contact {
     background-color: #242424;
     color: white;
+}
+
+.modal__title {
+    font-size: 26px;
+}
+
+.modal__sub-title {
+    margin: 12px 0 24px 0;
+    font-size: 14px;
+}
+
+.modal__para {
+    margin-bottom: 12px;
+    line-height: 1.75;
+}
+
+.form__item {
+    margin-bottom: 20px;
+}
+
+.form__submit {
+    background-color: #006b3c;
+    border: 2px solid #006b3c;
+    color: white;
+    font-weight: bold;
+    width: 100%;
+    max-width: 240px;
+    padding: 12px 24px;
+    font-size: 20px;
+    transition: all 300ms ease;
+}
+
+.form__submit:hover {
+    border-color: white;
+    background-color: transparent;
+}
+
+form__submit:active {
+    border-color: #006b3c;
+    color: #006b3c;
 }
 
 /* 
