--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@ input:focus, textarea:focus {
 }
 
 .click {
+    cursor: pointer;
     transition: 300ms;
 }
 
@@ -371,8 +372,7 @@ MODAL
     color: #006b3c;
 }
 
-.modal__overlay--loading {
-    background-color: #242424;
+.modal__overlay {
     position: absolute;
     left: 0;
     top: 0;
@@ -381,7 +381,21 @@ MODAL
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.modal__overlay--loading {
+    background-color: #242424;
     font-size: 80px;
+    z-index: -1;
+}
+
+.modal__overlay--success {
+    background-color: #4bb543;
+    font-size: 40px;
+    font-weight: bold;
+    text-align: center;
+    padding: 28px;
+
 }
 
 .fa-spinner {
@@ -395,6 +409,15 @@ MODAL
     100% {
         transform: rotate(360deg);
     }
+}
+
+.modal__exit {
+    position: absolute;
+    top: 30px;
+    right: 40px;
+    color: white;
+    font-size: 40px;
+    z-index: 100;
 }
 
 /* 
